--- a/template.yaml
+++ b/template.yaml
@@ -10,10 +10,9 @@ Globals:
   Function:
     Timeout: 3
     MemorySize: 128
-
-    # You can add LoggingConfig parameters such as the Logformat, Log Group, and SystemLogLevel or ApplicationLogLevel. Learn more here https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/sam-resource-function.html#sam-function-loggingconfig.
-    LoggingConfig:
-      LogFormat: JSON
+    Architectures:
+      - x86_64
+  
 Resources:
   HelloWorldFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
@@ -30,16 +29,60 @@ Resources:
             Path: /hello
             Method: get
 
+  UpdateVisitorCounterFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: src/update_counter  
+      Handler: app.lambda_handler
+      Runtime: python3.9
+      Architectures:
+        - x86_64
+      Environment:
+        Variables:
+          Table: !Ref VisitorCounterTable
+      Policies:
+        # Give Create/Read/Update/Delete Permissions to the VisitorCounter
+        - DynamoDBCrudPolicy:
+            TableName: !Ref VisitorCounterTable
+      Events:
+        UpdateCounter:
+          Type: Api
+          Properties:
+            Path: /counter
+            Method: POST  
+      Tags: 
+        Key: Project
+        Value: cloud-resume-challenge
+  VisitorCounterTable:
+    Type: AWS::Serverless::SimpleTable
+    Properties:
+      PrimaryKey: 
+        Name: visitors
+        Type: Number
+      TableName: "VisitorCounter"
+      Tags: 
+        Key: Project
+        Value: cloud-resume-challenge
+  
+  
+
+    
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
   # Find out more about other implicit resources you can reference within SAM
   # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
   HelloWorldApi:
     Description: API Gateway endpoint URL for Prod stage for Hello World function
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/"
+    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/counter/"
   HelloWorldFunction:
     Description: Hello World Lambda Function ARN
     Value: !GetAtt HelloWorldFunction.Arn
   HelloWorldFunctionIamRole:
     Description: Implicit IAM Role created for Hello World function
     Value: !GetAtt HelloWorldFunctionRole.Arn
+  UpdateVisitorCounterFunction:
+    Description: Update Visitor Counter Function ARN
+    Value: !GetAtt UpdateVisitorCounterFunction.Arn
+  UpdateVisitorCounterFunctionIamRole:
+    Description: Implicit IAM Role created for Update Visitor Counter Function
+    Value: !GetAtt UpdateVisitorCounterFunction.Arn
